Fix bug with board index that caused center align

--- a/frontend/src/components/Profile/Board/BoardIndex.css
+++ b/frontend/src/components/Profile/Board/BoardIndex.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
 }
 
 #plus-sign-holder {
